Tst/Tests/Pos/Null/nullReturn.p
main machine Entry {
    model fun foo () { }
    start state bar {
        entry {
            foo();
        }
    }
}
