Tst/Tests/Neg/Submachines/BadSubmachineState.p
main machine Entry {
    start state init {
        entry {
            call(Foo.bar);
        }
    }
    submachine Foo {
    }
}
